// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`multiple-routes build should create valid app 1`] = `
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <link data-chunk="handlers-Home"
          rel="stylesheet"
          href="http://localhost:4004/handlers-Home-62bf94bf0fd2ba3c2aa2.css"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="http://localhost:4004/runtime-9a3793da48103c08bd2a.js"
          crossorigin="anonymous"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="http://localhost:4004/vendors~main-d82aa38f2a7a1d2719e3.js"
          crossorigin="anonymous"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="http://localhost:4004/main-1f9caecec5fb4a1f17fa.js"
          crossorigin="anonymous"
    >
    <link data-chunk="handlers-Home"
          rel="preload"
          as="script"
          href="http://localhost:4004/handlers-Home-e31e76cf578c2f680f04.js"
          crossorigin="anonymous"
    >
  </head>
  <body>
    <div id="app">
      <h1 class="_1QX0Hyt">
        Welcome to the Home page -
        au
      </h1>
    </div>
    <script>
      window.__SKU_CLIENT_CONTEXT__ = {"site":"au"};
    </script>
    <script id="__LOADABLE_REQUIRED_CHUNKS__"
            type="application/json"
            crossorigin="anonymous"
    >
      [2]
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:4004/runtime-9a3793da48103c08bd2a.js"
            crossorigin="anonymous"
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:4004/vendors~main-d82aa38f2a7a1d2719e3.js"
            crossorigin="anonymous"
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:4004/main-1f9caecec5fb4a1f17fa.js"
            crossorigin="anonymous"
    >
    </script>
    <script async
            data-chunk="handlers-Home"
            src="http://localhost:4004/handlers-Home-e31e76cf578c2f680f04.js"
            crossorigin="anonymous"
    >
    </script>
  </body>
</html>
POST HYDRATE DIFFS: NO DIFF
`;

exports[`multiple-routes build should generate the expected files 1`] = `
Object {
  "AsyncComponent-4f6078a8c6372528d7ce.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "handlers-Details-0e82719ea3ab71aafb06.css": ._91MnZhe {
  color: #00f;
}
,
  "handlers-Details-ceeb54793ef1f495da82.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "handlers-Home-62bf94bf0fd2ba3c2aa2.css": ._1QX0Hyt {
  color: red;
}
,
  "handlers-Home-e31e76cf578c2f680f04.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "main-1f9caecec5fb4a1f17fa.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "production/au/details/:id/index.html": <!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <link data-chunk="handlers-Details"
          rel="stylesheet"
          href="http://localhost:4004/handlers-Details-0e82719ea3ab71aafb06.css"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="http://localhost:4004/runtime-9a3793da48103c08bd2a.js"
          crossorigin="anonymous"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="http://localhost:4004/vendors~main-d82aa38f2a7a1d2719e3.js"
          crossorigin="anonymous"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="http://localhost:4004/main-1f9caecec5fb4a1f17fa.js"
          crossorigin="anonymous"
    >
    <link data-chunk="handlers-Details"
          rel="preload"
          as="script"
          href="http://localhost:4004/handlers-Details-ceeb54793ef1f495da82.js"
          crossorigin="anonymous"
    >
    <link data-chunk="AsyncComponent"
          rel="preload"
          as="script"
          href="http://localhost:4004/AsyncComponent-4f6078a8c6372528d7ce.js"
          crossorigin="anonymous"
    >
  </head>
  <body>
    <div id="app">
      <h1 class="_91MnZhe">
        Welcome to the Details page -
        au
        <span>
          Some special async content
        </span>
      </h1>
    </div>
    <script>
      window.__SKU_CLIENT_CONTEXT__ = {"site":"au"};
    </script>
    <script id="__LOADABLE_REQUIRED_CHUNKS__"
            type="application/json"
            crossorigin="anonymous"
    >
      [1,0]
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:4004/runtime-9a3793da48103c08bd2a.js"
            crossorigin="anonymous"
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:4004/vendors~main-d82aa38f2a7a1d2719e3.js"
            crossorigin="anonymous"
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:4004/main-1f9caecec5fb4a1f17fa.js"
            crossorigin="anonymous"
    >
    </script>
    <script async
            data-chunk="handlers-Details"
            src="http://localhost:4004/handlers-Details-ceeb54793ef1f495da82.js"
            crossorigin="anonymous"
    >
    </script>
    <script async
            data-chunk="AsyncComponent"
            src="http://localhost:4004/AsyncComponent-4f6078a8c6372528d7ce.js"
            crossorigin="anonymous"
    >
    </script>
  </body>
</html>,
  "production/au/index.html": <!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <link data-chunk="handlers-Home"
          rel="stylesheet"
          href="http://localhost:4004/handlers-Home-62bf94bf0fd2ba3c2aa2.css"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="http://localhost:4004/runtime-9a3793da48103c08bd2a.js"
          crossorigin="anonymous"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="http://localhost:4004/vendors~main-d82aa38f2a7a1d2719e3.js"
          crossorigin="anonymous"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="http://localhost:4004/main-1f9caecec5fb4a1f17fa.js"
          crossorigin="anonymous"
    >
    <link data-chunk="handlers-Home"
          rel="preload"
          as="script"
          href="http://localhost:4004/handlers-Home-e31e76cf578c2f680f04.js"
          crossorigin="anonymous"
    >
  </head>
  <body>
    <div id="app">
      <h1 class="_1QX0Hyt">
        Welcome to the Home page -
        au
      </h1>
    </div>
    <script>
      window.__SKU_CLIENT_CONTEXT__ = {"site":"au"};
    </script>
    <script id="__LOADABLE_REQUIRED_CHUNKS__"
            type="application/json"
            crossorigin="anonymous"
    >
      [2]
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:4004/runtime-9a3793da48103c08bd2a.js"
            crossorigin="anonymous"
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:4004/vendors~main-d82aa38f2a7a1d2719e3.js"
            crossorigin="anonymous"
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:4004/main-1f9caecec5fb4a1f17fa.js"
            crossorigin="anonymous"
    >
    </script>
    <script async
            data-chunk="handlers-Home"
            src="http://localhost:4004/handlers-Home-e31e76cf578c2f680f04.js"
            crossorigin="anonymous"
    >
    </script>
  </body>
</html>,
  "production/nz/details/:id/index.html": <!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <link data-chunk="handlers-Details"
          rel="stylesheet"
          href="http://localhost:4004/handlers-Details-0e82719ea3ab71aafb06.css"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="http://localhost:4004/runtime-9a3793da48103c08bd2a.js"
          crossorigin="anonymous"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="http://localhost:4004/vendors~main-d82aa38f2a7a1d2719e3.js"
          crossorigin="anonymous"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="http://localhost:4004/main-1f9caecec5fb4a1f17fa.js"
          crossorigin="anonymous"
    >
    <link data-chunk="handlers-Details"
          rel="preload"
          as="script"
          href="http://localhost:4004/handlers-Details-ceeb54793ef1f495da82.js"
          crossorigin="anonymous"
    >
    <link data-chunk="AsyncComponent"
          rel="preload"
          as="script"
          href="http://localhost:4004/AsyncComponent-4f6078a8c6372528d7ce.js"
          crossorigin="anonymous"
    >
  </head>
  <body>
    <div id="app">
      <h1 class="_91MnZhe">
        Welcome to the Details page -
        nz
        <span>
          Some special async content
        </span>
      </h1>
    </div>
    <script>
      window.__SKU_CLIENT_CONTEXT__ = {"site":"nz"};
    </script>
    <script id="__LOADABLE_REQUIRED_CHUNKS__"
            type="application/json"
            crossorigin="anonymous"
    >
      [1,0]
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:4004/runtime-9a3793da48103c08bd2a.js"
            crossorigin="anonymous"
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:4004/vendors~main-d82aa38f2a7a1d2719e3.js"
            crossorigin="anonymous"
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:4004/main-1f9caecec5fb4a1f17fa.js"
            crossorigin="anonymous"
    >
    </script>
    <script async
            data-chunk="handlers-Details"
            src="http://localhost:4004/handlers-Details-ceeb54793ef1f495da82.js"
            crossorigin="anonymous"
    >
    </script>
    <script async
            data-chunk="AsyncComponent"
            src="http://localhost:4004/AsyncComponent-4f6078a8c6372528d7ce.js"
            crossorigin="anonymous"
    >
    </script>
  </body>
</html>,
  "production/nz/index.html": <!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <link data-chunk="handlers-Home"
          rel="stylesheet"
          href="http://localhost:4004/handlers-Home-62bf94bf0fd2ba3c2aa2.css"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="http://localhost:4004/runtime-9a3793da48103c08bd2a.js"
          crossorigin="anonymous"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="http://localhost:4004/vendors~main-d82aa38f2a7a1d2719e3.js"
          crossorigin="anonymous"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="http://localhost:4004/main-1f9caecec5fb4a1f17fa.js"
          crossorigin="anonymous"
    >
    <link data-chunk="handlers-Home"
          rel="preload"
          as="script"
          href="http://localhost:4004/handlers-Home-e31e76cf578c2f680f04.js"
          crossorigin="anonymous"
    >
  </head>
  <body>
    <div id="app">
      <h1 class="_1QX0Hyt">
        Welcome to the Home page -
        nz
      </h1>
    </div>
    <script>
      window.__SKU_CLIENT_CONTEXT__ = {"site":"nz"};
    </script>
    <script id="__LOADABLE_REQUIRED_CHUNKS__"
            type="application/json"
            crossorigin="anonymous"
    >
      [2]
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:4004/runtime-9a3793da48103c08bd2a.js"
            crossorigin="anonymous"
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:4004/vendors~main-d82aa38f2a7a1d2719e3.js"
            crossorigin="anonymous"
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:4004/main-1f9caecec5fb4a1f17fa.js"
            crossorigin="anonymous"
    >
    </script>
    <script async
            data-chunk="handlers-Home"
            src="http://localhost:4004/handlers-Home-e31e76cf578c2f680f04.js"
            crossorigin="anonymous"
    >
    </script>
  </body>
</html>,
  "runtime-9a3793da48103c08bd2a.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "vendors~main-d82aa38f2a7a1d2719e3.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
}
`;

exports[`multiple-routes start should render details page correctly 1`] = `
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <link data-chunk="handlers-Details"
          rel="stylesheet"
          href="/handlers-Details.css"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="/runtime.js"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="/vendors~devServerOnly~main.js"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="/vendors~main.js"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="/main.js"
    >
    <link data-chunk="handlers-Details"
          rel="preload"
          as="script"
          href="/handlers-Details.js"
    >
    <link data-chunk="AsyncComponent"
          rel="preload"
          as="script"
          href="/AsyncComponent.js"
    >
  </head>
  <body>
    <div id="app">
      <h1 class="Details__root___91MnZhe">
        Welcome to the Details page -
        au
        <span>
          Some special async content
        </span>
      </h1>
    </div>
    <script>
      window.__SKU_CLIENT_CONTEXT__ = {"site":"au"};
    </script>
    <script id="__LOADABLE_REQUIRED_CHUNKS__"
            type="application/json"
    >
      ["handlers-Details","AsyncComponent"]
    </script>
    <script async
            data-chunk="main"
            src="/runtime.js"
    >
    </script>
    <script async
            data-chunk="main"
            src="/vendors~devServerOnly~main.js"
    >
    </script>
    <script async
            data-chunk="main"
            src="/vendors~main.js"
    >
    </script>
    <script async
            data-chunk="main"
            src="/main.js"
    >
    </script>
    <script async
            data-chunk="handlers-Details"
            src="/handlers-Details.js"
    >
    </script>
    <script async
            data-chunk="AsyncComponent"
            src="/AsyncComponent.js"
    >
    </script>
  </body>
</html>
POST HYDRATE DIFFS: 
     <div id="app">
       <h1 class="Details__root___91MnZhe">
         Welcome to the Details page -
-        au
+        auID: 123
         <span>
           Some special async content
         </span>

`;

exports[`multiple-routes start should render home page correctly 1`] = `
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <link data-chunk="handlers-Home"
          rel="stylesheet"
          href="/handlers-Home.css"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="/runtime.js"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="/vendors~devServerOnly~main.js"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="/vendors~main.js"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="/main.js"
    >
    <link data-chunk="handlers-Home"
          rel="preload"
          as="script"
          href="/handlers-Home.js"
    >
  </head>
  <body>
    <div id="app">
      <h1 class="Home__root___1QX0Hyt">
        Welcome to the Home page -
        au
      </h1>
    </div>
    <script>
      window.__SKU_CLIENT_CONTEXT__ = {"site":"au"};
    </script>
    <script id="__LOADABLE_REQUIRED_CHUNKS__"
            type="application/json"
    >
      ["handlers-Home"]
    </script>
    <script async
            data-chunk="main"
            src="/runtime.js"
    >
    </script>
    <script async
            data-chunk="main"
            src="/vendors~devServerOnly~main.js"
    >
    </script>
    <script async
            data-chunk="main"
            src="/vendors~main.js"
    >
    </script>
    <script async
            data-chunk="main"
            src="/main.js"
    >
    </script>
    <script async
            data-chunk="handlers-Home"
            src="/handlers-Home.js"
    >
    </script>
  </body>
</html>
POST HYDRATE DIFFS: NO DIFF
`;
